web/src/css/index.css
@import "@nerd-bible/fonts/dist/faces.css";
@import "./pallette.css";
@import "./theme.css";
@import "./reset.css";

:root {
	font-family: var(--font-sans);
	background: var(--color-bg-50);
	color: var(--color-fg-50);
}

body {
	display: flex;
	flex-direction: column;
	width: 100vw;
	height: 100vh;
	/* avoid tooltips scrolling */
	overflow-x: hidden;
	/* avoid relayout when reader is tall */
	overflow-y: scroll;
}

body > *:last-child {
	flex-grow: 1;
}

noscript > h1 {
	display: block;
	font-size: 2rem;
}

